--- a/web/Users/module/musteri/musteri.xhtml
+++ b/web/Users/module/musteri/musteri.xhtml
@@ -3,18 +3,18 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="/template/template.xhtml">
+                template="/templateNormalKullanici/template.xhtml">
 
     <ui:define name="content">
         <div class="row">
             <div class="col-md-7">
-                <ui:include src="/module/user_yetki/table.xhtml"/>
+                <ui:include src="/module/musteri/table.xhtml"/>
             </div>
-             <div class="col-md-5">
-                <ui:include src="/module/user_yetki/form.xhtml"/>
+
+            <div class="col-md-5">
+                <ui:include src="/module/musteri/form.xhtml"/>
             </div>
         </div>
     </ui:define>
 
 </ui:composition>
-
