--- a/web/module/turlar/turlar.xhtml
+++ b/web/module/turlar/turlar.xhtml
@@ -8,13 +8,18 @@
     <ui:define name="content">
         <div class="row">
             <div class="col-md-7">
-                <ui:include src="/module/user_yetki/table.xhtml"/>
+                <ui:include src="/module/turlar/pagination.xhtml"/>
+                <ui:include src="/module/turlar/table.xhtml"/>
             </div>
-             <div class="col-md-5">
-                <ui:include src="/module/user_yetki/form.xhtml"/>
+
+            <div class="col-md-5">
+                <ui:include src="/module/turlar/form.xhtml"/>
+
+
             </div>
+
         </div>
     </ui:define>
 
-</ui:composition>
 
+</ui:composition>
